# mini-agent

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  emperor-has-no-clothes.html  file_version_info.txt  mini-agent.spec  pyproject.toml
.cursor/commands/: announce-branch.md  announce-version.md  check-pr.md  git-staged-msg.md  issue-new.md  pr-update.md  pr.md  readme-update.md  release-new.md  summary-update.md  summary.md  wiki-update.md
.github/workflows/: release-binaries.yml
dev/: release.sh
dev/Release-docs/: RELEASE_v0.1.0.md
packaging/pyinstaller/: linux.spec  macos.spec  windows-nsis.spec  windows.spec
packaging/windows/: mini-agent.nsi
src/: main.py  main_gui.py
src/agent/: __init__.py  config.py  gui.py  gui_markdown.py  llm.py  prompt.py  runner.py  tools.py
src/agent/gui/: __init__.py  _setup_layout.py  _setup_providers.py  _setup_style.py  app.py  bootstrap.py  fonts.py  markdown.py  setup_dialog.py  shell.py  theme.py  transcript_panel.py
src/agent/providers/: __init__.py  _shared.py  _template.py  _thinking.py  anthropic.py  base.py  openai.py
