[project]
name = "mini-agent"
version = "0.1.0"
description = "A minimal coding agent with file tools and an Anthropic or OpenAI LLM loop"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "mini-agent contributors" }]
keywords = ["anthropic", "claude", "openai", "agent", "llm", "coding-agent"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
]
dependencies = [
    "anthropic>=0.72.0",
    "openai>=1.54.0",
    "pip-system-certs>=5.3",
    "python-dotenv>=1.2.0",
]

[project.scripts]
mini-agent = "main:main"
mini-agent-gui = "main:main_gui"

[dependency-groups]
build = ["pyinstaller>=6.20.0"]

[tool.uv]
package = true
# Use Windows/macOS/Linux trust store for PyPI (same corporate roots as browsers).
native-tls = true

[tool.hatch.build.targets.wheel]
only-include = ["src/main.py", "src/agent"]
sources = ["src"]

[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"
